nitial version of event-driven architecture using database log listeners
he current version is a work-in-progress and requires further refinement as the underlying technologies demand deeper understanding.

ntroduced a prototype of event-driven system architecture:
- dblistener for ostgre and ongo to observe database changes and forward events to streamhub
- streamhub as a central hub coordinating inter-process communication and distributing events
- events service that listens to streamhub, processes events, persists them to ongo, and pushes updates via ebocket

ncludes preliminary logic for:
- andling chat deletions by cascading message deletions
- alidating messages based on stored data

urther improvements will be made as database log parsing and real-time event flow handling mature.

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ DB_PASSWORD=postgres
 DB_NAME=mydatabase
 DB_SSLMODE=disable
 PORT=6754
+MONGO_USER=youruser
+MONGO_PASS=yourpass
+MONGO_HOST=mongo
+MONGO_PORT=27017
+MONGO_DB=yourdb
